Fixing homepage spacing

--- a/web/app/themes/bulma-wordpress/src/styles.scss
+++ b/web/app/themes/bulma-wordpress/src/styles.scss
@@ -72,6 +72,10 @@ h3.header__motto {
     }
 }
 
+.article__content {
+    padding-bottom: 3rem;
+}
+
 .menu-list li {
     list-style-type: none;
 }
